==> JamesLinus/stm32/app_ucos/BSP/bsp.c <==
#define   BSP_MODULE
#include  <bsp.h>
#include  <bsp_os.h>
#include  <stm32f4xx_hal.h>
#define  BSP_BIT_RCC_PLLCFGR_PLLM               25u
#define  BSP_BIT_RCC_PLLCFGR_PLLN              336u
#define  BSP_BIT_RCC_PLLCFGR_PLLP                2u
#define  BSP_BIT_RCC_PLLCFGR_PLLQ                7u
#define  BSP_GPIO_LED1                        DEF_BIT_12
#define  BSP_GPIO_LED2                        DEF_BIT_13
#define  BSP_GPIO_LED3                        DEF_BIT_14
#define  BSP_GPIO_LED4                        DEF_BIT_15
#define  BSP_REG_DEM_CR                       (*(CPU_REG32 *)0xE000EDFC)
#define  BSP_REG_DWT_CR                       (*(CPU_REG32 *)0xE0001000)
#define  BSP_REG_DWT_CYCCNT                   (*(CPU_REG32 *)0xE0001004)
#define  BSP_REG_DBGMCU_CR                    (*(CPU_REG32 *)0xE0042004)
#define  BSP_DBGMCU_CR_TRACE_IOEN_MASK                   0x10
#define  BSP_DBGMCU_CR_TRACE_MODE_ASYNC                  0x00
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_01                0x40
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_02                0x80
#define  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04                0xC0
#define  BSP_DBGMCU_CR_TRACE_MODE_MASK                   0xC0
#define  BSP_BIT_DEM_CR_TRCENA                    DEF_BIT_24
#define  BSP_BIT_DWT_CR_CYCCNTENA                 DEF_BIT_00

void  BSP_Init (void)
{
    RCC_OscInitTypeDef  RCC_OscInitStruct;
    RCC_ClkInitTypeDef  RCC_ClkInitStruct;

    BSP_IntInit();

    HAL_RCC_DeInit();

    __HAL_RCC_PWR_CLK_ENABLE();                                 /* Enable Power Control clock.                          */
                                                                /* See Note 3.                                          */
    __HAL_PWR_VOLTAGESCALING_CONFIG(PWR_REGULATOR_VOLTAGE_SCALE1);

                                                                /* PLLCLK    = HSE * (PLLN / PLLM)      = 336MHz.       */
                                                                /* SYSCLK    = PLLCLK / PLLP            = 168MHz.       */
                                                                /* OTG_FSCLK = PLLCLK / PLLQ            =  48MHz.       */
    RCC_OscInitStruct.OscillatorType = RCC_OSCILLATORTYPE_HSE;
    RCC_OscInitStruct.HSEState       = RCC_HSE_ON;
    RCC_OscInitStruct.PLL.PLLState   = RCC_PLL_ON;
    RCC_OscInitStruct.PLL.PLLSource  = RCC_PLLSOURCE_HSE;
    RCC_OscInitStruct.PLL.PLLM       = BSP_BIT_RCC_PLLCFGR_PLLM;
    RCC_OscInitStruct.PLL.PLLN       = BSP_BIT_RCC_PLLCFGR_PLLN;
    RCC_OscInitStruct.PLL.PLLP       = BSP_BIT_RCC_PLLCFGR_PLLP;
    RCC_OscInitStruct.PLL.PLLQ       = BSP_BIT_RCC_PLLCFGR_PLLQ;
    HAL_RCC_OscConfig(&RCC_OscInitStruct);


    RCC_ClkInitStruct.ClockType      = RCC_CLOCKTYPE_SYSCLK |
                                       RCC_CLOCKTYPE_HCLK   |
                                       RCC_CLOCKTYPE_PCLK1  |
                                       RCC_CLOCKTYPE_PCLK2;
    RCC_ClkInitStruct.SYSCLKSource   = RCC_SYSCLKSOURCE_PLLCLK;
    RCC_ClkInitStruct.AHBCLKDivider  = RCC_SYSCLK_DIV1;          /* HCLK    = AHBCLK  = PLL / AHBPRES(1) = 168MHz.       */
    RCC_ClkInitStruct.APB1CLKDivider = RCC_HCLK_DIV4;           /* APB1CLK = AHBCLK  / APB1DIV(4)       = 42MHz (max).  */
    RCC_ClkInitStruct.APB2CLKDivider = RCC_HCLK_DIV2;           /* APB2CLK = AHBCLK  / APB2DIV(2)       = 84MHz.        */
    HAL_RCC_ClockConfig(&RCC_ClkInitStruct, FLASH_LATENCY_5);

                                                                /* STM32F405x/407x/415x/417x Revision Z devices: ...... */
    if (HAL_GetREVID() == 0x1001)                               /* ....prefetch is supported                            */
    {
      __HAL_FLASH_PREFETCH_BUFFER_ENABLE();                     /* Enable the Flash prefetch                            */
    }

    BSP_LED_Init();                                             /* Init LEDs.                                           */

#ifdef TRACE_EN                                                 /* See project / compiler preprocessor options.         */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_IOEN_MASK;    /* Enable tracing (see Note #2).                        */
    BSP_CPU_REG_DBGMCU_CR &= ~BSP_DBGMCU_CR_TRACE_MODE_MASK;    /* Clr trace mode sel bits.                             */
    BSP_CPU_REG_DBGMCU_CR |=  BSP_DBGMCU_CR_TRACE_MODE_SYNC_04; /* Cfg trace mode to synch 4-bit.                       */
#endif
}

CPU_INT32U  BSP_CPU_ClkFreq (void)
{
    CPU_INT32U  hclk_freq;


    hclk_freq = HAL_RCC_GetHCLKFreq();
    return (hclk_freq);
}

static void  BSP_LED_Init()
{
    GPIO_InitTypeDef  gpio_init;


    BSP_PeriphEn(BSP_PERIPH_ID_GPIOD);                          /* Configure GPIOG for LED1 and LED2                    */

    gpio_init.Pin   = BSP_GPIO_LED1 | BSP_GPIO_LED2 | BSP_GPIO_LED3 | BSP_GPIO_LED4;
    gpio_init.Mode  = GPIO_MODE_OUTPUT_PP;
    gpio_init.Pull  = GPIO_PULLUP;
    gpio_init.Speed = GPIO_SPEED_HIGH;

    HAL_GPIO_Init(GPIOD, &gpio_init);
}

void  BSP_LED_On (CPU_INT08U  led)
{
    switch (led) {
        case 0u:
             HAL_GPIO_WritePin(GPIOD, (BSP_GPIO_LED1 | BSP_GPIO_LED2 | BSP_GPIO_LED3 | BSP_GPIO_LED4), GPIO_PIN_SET);
             break;


        case 1u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED1, GPIO_PIN_SET);
             break;


        case 2u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED2, GPIO_PIN_SET);
             break;


        case 3u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED3, GPIO_PIN_SET);
             break;


        case 4u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED4, GPIO_PIN_SET);
             break;


        default:
             break;
    }
}

void  BSP_LED_Off (CPU_INT08U led)
{
    switch (led) {
        case 0u:
             HAL_GPIO_WritePin(GPIOD, (BSP_GPIO_LED1 | BSP_GPIO_LED2 | BSP_GPIO_LED3 | BSP_GPIO_LED4), GPIO_PIN_RESET);
             break;


        case 1u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED1, GPIO_PIN_RESET);
             break;


        case 2u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED2, GPIO_PIN_RESET);
             break;


        case 3u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED3, GPIO_PIN_RESET);
             break;


        case 4u:
             HAL_GPIO_WritePin(GPIOD, BSP_GPIO_LED4, GPIO_PIN_RESET);
             break;


        default:
             break;
    }
}

void  BSP_LED_Toggle (CPU_INT08U  led)
{
    switch (led) {
        case 0u:
             HAL_GPIO_TogglePin(GPIOD,(BSP_GPIO_LED1 | BSP_GPIO_LED2 | BSP_GPIO_LED3 | BSP_GPIO_LED4));
             break;


        case 1u:
             HAL_GPIO_TogglePin(GPIOD,BSP_GPIO_LED1);
             break;


        case 2u:
             HAL_GPIO_TogglePin(GPIOD, BSP_GPIO_LED2);
             break;


        case 3u:
             HAL_GPIO_TogglePin(GPIOD, BSP_GPIO_LED3);
             break;


        case 4u:
             HAL_GPIO_TogglePin(GPIOD, BSP_GPIO_LED4);
             break;


        default:
             break;
    }
}
